ansible/kubernetes/20-monitoring/1-namespace.yaml
# initialize monitoring namespace
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-prod
  labels:
    name: monitoring-prod
